# esp-glasses

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
.github/: copilot-instructions.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  project_local_config.h  project_local_config.private.example.h
main/BLE_server/: gatts_demo.c
main/LCD_Driver/: ST7789.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
main/Microros/: micro_ros_sub.c  micro_ros_sub.h
main/Nav_parser/: nav_parser.c  nav_parser.h
main/Wireless/: wifi_connect.c  wifi_connect.h
main/fonts/: font_18.h  font_20.h  nav_icon.c  nav_icon.h  vehicle.c  vehicle.h
reference/: ble-caption-protocol-draft.md
